--- a/example/nginx.conf
+++ b/example/nginx.conf
@@ -3,7 +3,7 @@ server {
   server_name 127.0.0.1;
   location ~ /(.*) {
   # IPv6 doenst yet work with the dns server
-    resolver sqlite-dns-resolver  ipv6=off;
+    resolver sqlite-dns-resolver  ipv6=off valid=20s;
     proxy_pass       http://$1:80;
     # proxy_set_header Host            'google.com';
   }
